# pdos_gnn

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: test_ids.csv  train_ids.csv
notebooks/: download_data.ipynb  materials_space_umap.ipynb  predict_pdos_fingerprints.ipynb  search_for_similar_materials.ipynb
pdos_gnn/models/: crystal_model.py
pdos_gnn/utilities/: preprocess.py
utilities/: preprocess.py  training.py
